# sounds

./: CLAUDE.md  FEATURES.md  README.md  pyproject.toml
src/sounds/: main.py  models.py  window.py
src/sounds/engine/: analyzer.py  player.py
src/sounds/engine/sources/: base.py  file.py  url.py
src/sounds/ui/: section_bar.py  seek_bar.py
